--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.1.2",
     "bootstrap": "^5.3.3",
+    "sass": "^1.79.3",
     "tailwindcss": "^3.4.12",
     "vite": "^5.4.1"
   }
