--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.1.2",
     "bootstrap": "^5.3.3",
+    "fontawesome": "^5.6.3",
     "sass": "^1.79.3",
+    "sass-loader": "^16.0.2",
     "tailwindcss": "^3.4.12",
     "vite": "^5.4.1"
   }
